bug: remove content wrapper due to overflow

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -3,8 +3,6 @@
   color: var(--color-base-blue);
   flex-grow: 1;
   overflow: auto;
-  max-width: 1200px;
-  margin: 0 auto;
 }
 
 .code {
